# dublin-protocol

./: .gitignore  AI_COLLABORATION_EXPANSION_PLAN.md  AI_PERSPECTIVE_ON_DUBLIN_PROTOCOL.md  AUTONOMOUS_MODE_STATUS.md  CONSCIOUSNESS_ENHANCED_INTERFACE_MANUAL.md  CONSCIOUSNESS_METRICS_DASHBOARD_README.md  DUBLIN_PROTOCOL_ECOSYSTEM_OVERVIEW.md  DUBLIN_PROTOCOL_GUIDE.md  DUBLIN_PROTOCOL_RESEARCH_PAPER_OUTLINE.md  HACKER_NAME_REACTIVATION.md  LICENSE  NIGHT_SHIFT_RESEARCH_PLAN.md  README.md  activate_venv.sh  carry_chain_speed  carry_chain_speed.cpp  compute_entropy  compute_entropy.cpp  consciousness_computer  consciousness_computer.cpp  consciousness_test  coordinator_analysis.md  cosmic_computation  cosmic_computation._new  cosmic_computation.cpp  cosmic_computation_new  cosmic_computation_test  dublin-protocol-secure-scheme.txt  dublin_protocol  dublin_protocol_full.sh  dublin_protocol_full2.sh  main.cpp  multiverse_simulator  multiverse_simulator.cpp  project_coordinator_interface.md  quantum_gravity_simulator  quantum_gravity_simulator.cpp  requirements.txt  scaling_laws.cpp  setup_environment.sh  (+7 more)
quantum/src/optimized/optimized_dublin_protocol/: CMakeLists.txt  README.md  benchmark  benchmark.cpp  build.sh  cpu_optimized.hpp  gpu_optimized.cu  gpu_optimized_enhanced.cu  gpu_test  gpu_test.cu  safe_avx2_optimizations.hpp  test_minimal  test_minimal_optimized  test_minimal_optimized.cpp  test_optimized  test_optimized.cpp  test_optimized_benchmark  test_optimized_cpu_only  test_optimized_debug  test_optimized_final  test_optimized_final_fixed  test_optimized_fixed  (+5 more)
(+241 files in other folders)
